--- a/app/public/pc/app.css
+++ b/app/public/pc/app.css
@@ -1822,5 +1822,320 @@ div.dis-ib {
       -webkit-transform: translate3d(0px, -0.14652vw, 0px);
               transform: translate3d(0px, -0.14652vw, 0px);
       transition: all 0.3s ease; }
+@charset "UTF-8";
+.production-detail-div .container {
+  margin-top: 2.1978vw;
+  height: 10.98901vw;
+  border-top: 1px solid #ccc;
+  border-bottom: 1px solid #ccc; }
+  .production-detail-div .container .production-left {
+    position: relative;
+    padding: 0.7326vw 2.1978vw;
+    width: 54.94505vw; }
+    .production-detail-div .container .production-left .production-title {
+      font-size: 1.8315vw;
+      line-height: 3.663vw; }
+    .production-detail-div .container .production-left .production-text {
+      font-size: 1.0989vw;
+      line-height: 2.5641vw;
+      color: #5e6468; }
+    .production-detail-div .container .production-left .about-production {
+      position: absolute;
+      bottom: 1.4652vw;
+      right: 2.1978vw;
+      margin-top: 0.7326vw;
+      width: 14.65201vw;
+      color: #5e6468;
+      font-size: 0.95238vw; }
+      .production-detail-div .container .production-left .about-production .icon {
+        font-size: 1.31868vw; }
+  .production-detail-div .container .about-author {
+    padding: 0.7326vw 2.1978vw;
+    width: 32.96703vw;
+    height: 100%;
+    border-left: 1px solid #ccc; }
+    .production-detail-div .container .about-author .portrait-img {
+      margin-top: 0.7326vw;
+      width: 7.32601vw;
+      height: 7.32601vw;
+      border-radius: 3.663vw;
+      background-position: center center;
+      background-size: cover; }
+    .production-detail-div .container .about-author .author-right {
+      margin-left: 2.1978vw; }
+      .production-detail-div .container .about-author .author-right .author-name {
+        font-size: 1.8315vw;
+        line-height: 2.9304vw; }
+      .production-detail-div .container .about-author .author-right .author-sort {
+        font-size: 1.0989vw;
+        line-height: 2.1978vw; }
+      .production-detail-div .container .about-author .author-right .btn-list {
+        margin-top: 1.4652vw; }
+        .production-detail-div .container .about-author .author-right .btn-list .attention-btn {
+          width: 5.86081vw;
+          height: 2.5641vw;
+          border-radius: 0.3663vw;
+          background-color: #f068a9; }
+        .production-detail-div .container .about-author .author-right .btn-list .detail-btn {
+          margin-left: 0.7326vw;
+          width: 5.86081vw;
+          height: 2.5641vw;
+          border-radius: 0.3663vw;
+          border: 1px solid #5e6468;
+          background-color: #fff; }
+
+.production-img-list .container .list-describe {
+  padding: 7.32601vw 7.32601vw 1.4652vw 7.32601vw; }
+  .production-img-list .container .list-describe .describe {
+    font-size: 1.4652vw;
+    line-height: 3.663vw;
+    color: #5e6468; }
+
+.production-img-list .container .img-list {
+  padding: 2.1978vw; }
+
+.production-detail-comment {
+  padding: 2.1978vw;
+  background-color: #e9e6e6; }
+  .production-detail-comment .container .comment-div {
+    background-color: #fff;
+    min-height: 21.97802vw;
+    /*初始化样式*/
+    /*清除浮动*/
+    /*浮动*/
+    /*----------------------------------------------------------------------------------------------------------*/
+    /*----------评论区域 begin----------*/
+    /*----------评论区域 end----------*/ }
+    .production-detail-comment .container .comment-div body, .production-detail-comment .container .comment-div h1, .production-detail-comment .container .comment-div h2, .production-detail-comment .container .comment-div h3, .production-detail-comment .container .comment-div h4, .production-detail-comment .container .comment-div h5, .production-detail-comment .container .comment-div ul, .production-detail-comment .container .comment-div li, .production-detail-comment .container .comment-div a, .production-detail-comment .container .comment-div div, .production-detail-comment .container .comment-div p, .production-detail-comment .container .comment-div span, .production-detail-comment .container .comment-div table, .production-detail-comment .container .comment-div tr, .production-detail-comment .container .comment-div td, .production-detail-comment .container .comment-div img {
+      margin: 0;
+      padding: 0; }
+    .production-detail-comment .container .comment-div ul {
+      padding: 0;
+      margin: 0; }
+    .production-detail-comment .container .comment-div li {
+      list-style: none; }
+    .production-detail-comment .container .comment-div a {
+      text-decoration: none; }
+    .production-detail-comment .container .comment-div img {
+      outline: none;
+      border: 0; }
+    .production-detail-comment .container .comment-div body {
+      font-family: "Microsoft Yahei"; }
+    .production-detail-comment .container .comment-div .clearfix:before,
+    .production-detail-comment .container .comment-div .clearfix:after {
+      content: " ";
+      display: table; }
+    .production-detail-comment .container .comment-div .clearfix:after {
+      clear: both; }
+    .production-detail-comment .container .comment-div .clearfix {
+      zoom: 1; }
+    .production-detail-comment .container .comment-div .pull-right {
+      float: right !important; }
+    .production-detail-comment .container .comment-div .pull-left {
+      float: left !important; }
+    .production-detail-comment .container .comment-div .content {
+      float: left; }
+    .production-detail-comment .container .comment-div .flex-text-wrap, .production-detail-comment .container .comment-div pre {
+      margin: 0 !important; }
+    .production-detail-comment .container .comment-div .commentAll {
+      width: 36.63004vw;
+      padding: 1.4652vw;
+      border: 1px solid #ededed;
+      margin: 1.4652vw auto; }
+    .production-detail-comment .container .comment-div .plBtn {
+      width: 5.49451vw;
+      height: 2.63736vw;
+      line-height: 2.63736vw;
+      background-color: #339b53;
+      text-align: center;
+      display: block;
+      float: right;
+      color: #FFFFFF;
+      font-size: 0.87912vw;
+      border-radius: 0.43956vw;
+      margin-right: 0.14652vw;
+      margin-top: 1.4652vw; }
+    .production-detail-comment .container .comment-div .plBtn:hover {
+      background-color: #2f904d; }
+    .production-detail-comment .container .comment-div .comment-show {
+      margin-top: 1.4652vw; }
+    .production-detail-comment .container .comment-div .comment-show-con {
+      width: 100%;
+      border-top: 1px solid #EDEDED;
+      padding: 0.7326vw 0; }
+    .production-detail-comment .container .comment-div .comment-show-con-img {
+      width: 3.51648vw;
+      height: 3.51648vw;
+      overflow: hidden;
+      margin-top: 0.3663vw; }
+    .production-detail-comment .container .comment-div .comment-show-con-list {
+      width: 85%;
+      margin-left: 3%; }
+    .production-detail-comment .container .comment-div .pl-text {
+      width: 100%;
+      margin-top: 0.51282vw;
+      word-wrap: break-word;
+      overflow: hidden; }
+    .production-detail-comment .container .comment-div .date-dz {
+      width: 100%;
+      float: left; }
+    .production-detail-comment .container .comment-div .hf-list-con {
+      float: left;
+      width: 100%;
+      background-color: #eaeaec;
+      margin-top: 0.51282vw; }
+    .production-detail-comment .container .comment-div .comment-size-name {
+      font-size: 0.87912vw;
+      color: #339b53; }
+    .production-detail-comment .container .comment-div .my-pl-con {
+      font-size: 0.87912vw;
+      color: #8b8b8b;
+      width: 100%; }
+    .production-detail-comment .container .comment-div .date-dz-left {
+      font-size: 0.87912vw;
+      color: #8b8b8b;
+      display: block;
+      padding-top: 1.31868vw; }
+    .production-detail-comment .container .comment-div .comment-time, .production-detail-comment .container .comment-div .comment-pl-block {
+      padding-top: 0.51282vw; }
+    .production-detail-comment .container .comment-div .comment-pl-block {
+      margin-top: 0; }
+    .production-detail-comment .container .comment-div .date-dz-right {
+      display: block;
+      padding-top: 0.43956vw;
+      padding-right: 1.31868vw;
+      position: relative;
+      overflow: hidden; }
+    .production-detail-comment .container .comment-div .removeBlock {
+      float: left;
+      font-size: 0.87912vw;
+      color: #8b8b8b;
+      margin-right: 1.75824vw;
+      display: block;
+      opacity: 0; }
+    .production-detail-comment .container .comment-div .hf-con-block {
+      display: block; }
+    .production-detail-comment .container .comment-div .date-dz-pl, .production-detail-comment .container .comment-div .date-dz-line, .production-detail-comment .container .comment-div .date-dz-z {
+      font-size: 0.87912vw;
+      color: #8b8b8b; }
+    .production-detail-comment .container .comment-div .date-dz-line {
+      display: block;
+      padding: 0 1.4652vw; }
+    .production-detail-comment .container .comment-div .date-dz-z-click-red {
+      width: 1.24542vw;
+      height: 1.24542vw;
+      display: block;
+      float: left;
+      background-image: url("/public/images/cover/1.jpg");
+      background-repeat: no-repeat;
+      background-position: -0.43956vw -14.50549vw;
+      margin-right: 0.3663vw; }
+    .production-detail-comment .container .comment-div .z-num {
+      font-style: normal; }
+    .production-detail-comment .container .comment-div .date-dz-z-click {
+      color: #b83b44; }
+    .production-detail-comment .container .comment-div .red {
+      background-position: -0.43956vw -8.71795vw !important; }
+    .production-detail-comment .container .comment-div .hf-pl {
+      width: 5.12821vw;
+      height: 2.1978vw;
+      line-height: 2.1978vw;
+      background-color: #339b53;
+      text-align: center;
+      display: block;
+      float: right;
+      color: #FFFFFF;
+      font-size: 0.87912vw;
+      border-radius: 0.43956vw;
+      margin-right: 0.14652vw;
+      margin-top: 1.4652vw; }
+    .production-detail-comment .container .comment-div .hf-con {
+      width: 100%;
+      margin-top: 1.75824vw; }
+    .production-detail-comment .container .comment-div .hf-input {
+      font-size: 0.87912vw; }
+    .production-detail-comment .container .comment-div .all-pl-con {
+      width: 96%;
+      padding: 2% 0;
+      float: left;
+      margin: 0 2%; }
+    .production-detail-comment .container .comment-div .atName {
+      font-size: 0.87912vw;
+      color: #339b53; }
+    .production-detail-comment .container .comment-div .hfpl-text {
+      margin-top: 0; }
+    .production-detail-comment .container .comment-div .date-dz:hover .removeBlock {
+      opacity: 1; }
+    .production-detail-comment .container .comment-div .hf-list-con .all-pl-con {
+      border-top: 1px solid #d9d9d9;
+      padding-bottom: 0.87912vw; }
+    .production-detail-comment .container .comment-div .hf-list-con .all-pl-con:first-child {
+      border-top: 0; }
+    .production-detail-comment .container .comment-div pre {
+      white-space: pre;
+      white-space: pre-wrap;
+      word-wrap: break-word; }
+    .production-detail-comment .container .comment-div .flex-text-wrap {
+      width: 100%;
+      position: relative;
+      *zoom: 1; }
+    .production-detail-comment .container .comment-div textarea,
+    .production-detail-comment .container .comment-div .flex-text-wrap {
+      outline: 0;
+      margin: 0;
+      border: none;
+      padding: 0;
+      *padding-bottom: 0 !important; }
+    .production-detail-comment .container .comment-div .flex-text-wrap textarea,
+    .production-detail-comment .container .comment-div .flex-text-wrap pre {
+      *white-space: pre;
+      *word-wrap: break-word;
+      white-space: pre-wrap;
+      width: 100%;
+      -ms-box-sizing: border-box;
+      box-sizing: border-box; }
+    .production-detail-comment .container .comment-div .flex-text-wrap textarea {
+      overflow: hidden;
+      position: absolute;
+      top: 0;
+      left: 0;
+      height: 100%;
+      width: 100%;
+      resize: none;
+      /* IE7 box-sizing fudge factor */
+      *height: 94%;
+      *width: 94%; }
+    .production-detail-comment .container .comment-div .flex-text-wrap pre {
+      display: block;
+      visibility: hidden; }
+    .production-detail-comment .container .comment-div .flex-text-wrap,
+    .production-detail-comment .container .comment-div textarea {
+      margin-bottom: 1.8315vw; }
+    .production-detail-comment .container .comment-div textarea,
+    .production-detail-comment .container .comment-div .flex-text-wrap pre {
+      line-height: 1.7;
+      font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
+      font-size: 100%;
+      padding: 0.7326vw 1.0989vw;
+      border: 1px solid #c6c8ce;
+      width: 100%;
+      -webkit-appearance: none;
+      background: #fff;
+      border-radius: 0.21978vw;
+      background-clip: padding-box;
+      box-shadow: 0 0 0.58608vw rgba(182, 195, 214, 0.6) inset, 0 1px 1px #fff;
+      transition-duration: 300ms;
+      -webkit-transition-easing: ease-in-out;
+      -moz-transition-easing: ease-in-out;
+      -o-transition-easing: ease-in-out;
+      -ms-transition-easing: ease-in-out;
+      transition-easing: ease-in-out;
+      transition-property: border-color, box-shadow; }
+    .production-detail-comment .container .comment-div .fork-link {
+      display: block;
+      position: absolute;
+      top: 0;
+      right: 0;
+      width: 10.25641vw; }
 
 /*# sourceMappingURL=data:application/json;charset=utf-8;base64,eyJ2ZXJzaW9uIjozLCJzb3VyY2VzIjpbXSwibmFtZXMiOltdLCJtYXBwaW5ncyI6IiIsImZpbGUiOiJhcHAuY3NzIiwic291cmNlUm9vdCI6IiJ9*/
