--- a/app/view/pc/styles/sort.scss
+++ b/app/view/pc/styles/sort.scss
@@ -15,25 +15,26 @@ $t-hover-color: #ee534e;
 
             display: block;
 
-            margin-bottom: 50px;
-            height: 520px;
-            width: 330px;
+            margin: 0 10px 30px 0;
+            width: 250px;
 
             border-radius: 5px;
+
+            overflow: hidden;
 
             .list-img-div {
                 position: relative;
 
-                width: 330px;
-                height: 330px;
+                width: 250px;
+                height: 210px;
 
                 overflow: hidden;
 
                 cursor: pointer;
 
                 .item-img {
-                    width: 330px;
-                    height: 330px;
+                    width: 250px;
+                    height: 210px;
 
                     border-radius: 5px 5px 0 0;
 
@@ -72,11 +73,20 @@ $t-hover-color: #ee534e;
             }
 
             .item-text {
-                margin-top: 10px;
                 padding: 10px;
+
+                background-color: #fff;
+
+                font-size: 13px;
                 
                 .t-title {
                     color: $black-color;
+
+                    line-height: 30px;
+
+                    .icon {
+                        font-size: 20px;
+                    }
                 }
 
                 .t-title:hover {
@@ -84,20 +94,29 @@ $t-hover-color: #ee534e;
                 }
 
                 .t-describe {
-                    margin-top: 15px;
-
                     color: $gray-color;
+
                 }
 
-                .t-type {
-                    position: absolute;
-                    bottom: 10px;
+                .about-production {
+                    margin-top: 10px;
+                    width: 200px;
 
-                    color: $black-color;
+                    color: $gray-color;
+
+                    font-size: 13px;
 
                     .icon {
-                        font-size: 30px;
+                        font-size: 18px;
                     }
+                }
+
+                .product-create-time {
+                    margin-right: 10px;
+                    
+                    line-height: 30px;
+
+                    color: $gray-color;
                 }
             }
         }
